--- a/OnSaleProductsMVC/OnSaleProductsMVC.csproj
+++ b/OnSaleProductsMVC/OnSaleProductsMVC.csproj
@@ -167,6 +167,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Views\Products\ProductIndexViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
